[gd_scene load_steps=56 format=3 uid="uid://beoam7q0wsi2y"]

[ext_resource type="Script" path="res://Scripts/enemy/quartz_behemoth.gd" id="1_jg5qo"]
[ext_resource type="Texture2D" uid="uid://dgatoeoa186su" path="res://Assets/Sprites/enemies/quartz_behemoth.png" id="2_h6rm2"]
[ext_resource type="PackedScene" uid="uid://q3bng0o4u44l" path="res://Scenes/enemies/damage_player.tscn" id="3_sktu2"]
[ext_resource type="AudioStream" uid="uid://blwhsg8wwq05v" path="res://Assets/Audio/quartz_behemoth/quartz_hit_sound.mp3" id="4_65egv"]
[ext_resource type="AudioStream" uid="uid://c4k0kgho0hdej" path="res://Assets/Audio/quartz_behemoth/quartz-141419.mp3" id="4_bhi0a"]
[ext_resource type="AudioStream" uid="uid://db3lxuxq6714e" path="res://Assets/Audio/quartz_behemoth/boost-100537.mp3" id="4_gwmnn"]
[ext_resource type="AudioStream" uid="uid://beafhq2rtssrm" path="res://Assets/Audio/quartz_behemoth/quartz_spawn_sound.mp3" id="5_sel5a"]
[ext_resource type="AudioStream" uid="uid://bgov1ltmswr6s" path="res://Assets/Audio/quartz_behemoth/quartz_death_sound.mp3" id="6_k8tyl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nyloe"]
radius = 8.89277
height = 21.5952

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6k7h3"]
resource_local_to_scene = true

[sub_resource type="AtlasTexture" id="AtlasTexture_soj28"]
atlas = ExtResource("2_h6rm2")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_27s52"]
atlas = ExtResource("2_h6rm2")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbjnn"]
atlas = ExtResource("2_h6rm2")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnpu8"]
atlas = ExtResource("2_h6rm2")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykbtp"]
atlas = ExtResource("2_h6rm2")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaqed"]
atlas = ExtResource("2_h6rm2")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw5ha"]
atlas = ExtResource("2_h6rm2")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qw40"]
atlas = ExtResource("2_h6rm2")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvjgp"]
atlas = ExtResource("2_h6rm2")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijl4t"]
atlas = ExtResource("2_h6rm2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hadry"]
atlas = ExtResource("2_h6rm2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sljf"]
atlas = ExtResource("2_h6rm2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_45ner"]
atlas = ExtResource("2_h6rm2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ja2bh"]
atlas = ExtResource("2_h6rm2")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cce7h"]
atlas = ExtResource("2_h6rm2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nh78"]
atlas = ExtResource("2_h6rm2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfvcq"]
atlas = ExtResource("2_h6rm2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1yqw"]
atlas = ExtResource("2_h6rm2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqkxp"]
atlas = ExtResource("2_h6rm2")
region = Rect2(0, 192, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_28gu4"]
atlas = ExtResource("2_h6rm2")
region = Rect2(0, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysysi"]
atlas = ExtResource("2_h6rm2")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvevi"]
atlas = ExtResource("2_h6rm2")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t4ny"]
atlas = ExtResource("2_h6rm2")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrbng"]
atlas = ExtResource("2_h6rm2")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qqg1"]
atlas = ExtResource("2_h6rm2")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kr1e"]
atlas = ExtResource("2_h6rm2")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygnfe"]
atlas = ExtResource("2_h6rm2")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbkh1"]
atlas = ExtResource("2_h6rm2")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_458j5"]
atlas = ExtResource("2_h6rm2")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2mas"]
atlas = ExtResource("2_h6rm2")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ani1n"]
atlas = ExtResource("2_h6rm2")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x00dt"]
atlas = ExtResource("2_h6rm2")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_27f5b"]
atlas = ExtResource("2_h6rm2")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p2g2"]
atlas = ExtResource("2_h6rm2")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jix6o"]
atlas = ExtResource("2_h6rm2")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypg86"]
atlas = ExtResource("2_h6rm2")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuo0x"]
atlas = ExtResource("2_h6rm2")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqkcc"]
atlas = ExtResource("2_h6rm2")
region = Rect2(512, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gw8k"]
atlas = ExtResource("2_h6rm2")
region = Rect2(576, 256, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ogtji"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_soj28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27s52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbjnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnpu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykbtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaqed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw5ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qw40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvjgp")
}],
"loop": false,
"name": &"attack_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijl4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hadry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sljf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45ner")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja2bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cce7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nh78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfvcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1yqw")
}],
"loop": false,
"name": &"attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqkxp")
}],
"loop": true,
"name": &"dash_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_28gu4")
}],
"loop": false,
"name": &"dash_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysysi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvevi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t4ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrbng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qqg1")
}],
"loop": false,
"name": &"dying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kr1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygnfe")
}],
"loop": true,
"name": &"look_left",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbkh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_458j5")
}],
"loop": true,
"name": &"look_right",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2mas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ani1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x00dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27f5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p2g2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jix6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypg86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuo0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqkcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gw8k")
}],
"loop": false,
"name": &"spawning",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g4sa5"]
radius = 15.0
height = 52.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_84dmf"]
radius = 2.0
height = 32.0

[sub_resource type="Animation" id="Animation_ly7xv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5mjcq"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4hf0x"]
_data = {
"RESET": SubResource("Animation_ly7xv"),
"hit_flash": SubResource("Animation_5mjcq")
}

[node name="quartz_behemoth" type="CharacterBody2D"]
collision_layer = 12
collision_mask = 9
script = ExtResource("1_jg5qo")

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-2.71051e-20, -27)
scale = Vector2(2.36147, 2.50056)
shape = SubResource("CapsuleShape2D_nyloe")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_6k7h3")
position = Vector2(0, -27)
sprite_frames = SubResource("SpriteFrames_ogtji")
animation = &"dying"

[node name="DamagePlayer" parent="." instance=ExtResource("3_sktu2")]
position = Vector2(0, -34)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamagePlayer"]
position = Vector2(0, 9)
shape = SubResource("CapsuleShape2D_g4sa5")

[node name="Attack_timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Death_timer" type="Timer" parent="."]
wait_time = 2.1
one_shot = true

[node name="Spawn_timer" type="Timer" parent="."]
wait_time = 1.7
one_shot = true

[node name="collision_with_player" type="CharacterBody2D" parent="."]
position = Vector2(0, -5)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision_with_player"]
position = Vector2(0, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_84dmf")

[node name="dash_sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -27)
stream = ExtResource("4_gwmnn")
bus = &"Sound Effect"

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -21)
stream = ExtResource("4_65egv")
volume_db = -3.0
bus = &"Sound Effect"

[node name="SpawnSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -21)
stream = ExtResource("5_sel5a")
volume_db = -5.0
bus = &"Sound Effect"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -21)
stream = ExtResource("6_k8tyl")
bus = &"Sound Effect"

[node name="attack_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_bhi0a")
volume_db = -5.0
bus = &"Sound Effect"

[node name="Hit_Flash_animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4hf0x")
}

[node name="hit_flash_animation_timer" type="Timer" parent="Hit_Flash_animation_player"]
wait_time = 0.2
one_shot = true

[node name="After_image_spawn_timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="dash_timer" type="Timer" parent="."]
one_shot = true

[node name="spike_attack_duration" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="spike_attack_animation_timer" type="Timer" parent="."]
one_shot = true

[node name="spikes_spawn_start_offset_timer" type="Timer" parent="."]
one_shot = true

[node name="spawn_spikes_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="Spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="Hit_Flash_animation_player/hit_flash_animation_timer" to="." method="_on_hit_flash_animation_timer_timeout"]
[connection signal="timeout" from="After_image_spawn_timer" to="." method="_on_after_image_spawn_timer_timeout"]
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="spike_attack_duration" to="." method="_on_spike_attack_duration_timeout"]
[connection signal="timeout" from="spike_attack_animation_timer" to="." method="_on_spike_attack_animation_timer_timeout"]
[connection signal="timeout" from="spikes_spawn_start_offset_timer" to="." method="_on_spikes_spawn_start_offset_timer_timeout"]
[connection signal="timeout" from="spawn_spikes_timer" to="." method="_on_spawn_spikes_timer_timeout"]
